
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical">

    <TextView
        android:id="@+id/app_gpa"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/WelcomeBanner"
        android:textSize="32sp"
        android:textStyle="bold"
        android:visibility="invisible"
        />

    <ImageView
        android:id="@+id/icon"
        android:layout_width="67dp"
        android:layout_height="72dp"
        android:layout_marginTop="50dp"
        android:contentDescription="@string/todo"
        android:src="@drawable/calculate"
        android:visibility="invisible" />
    <ProgressBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:indeterminate="true"
        android:layout_marginTop="100dp" />

    <TextView
        android:id="@+id/DeveloperInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/company"
        android:textSize="20sp"
        android:visibility="invisible"
        android:layout_marginTop="150dp"
        />


</LinearLayout>
