<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!-- Banner TextView at the top -->
    <RelativeLayout
        android:id="@+id/oneLay"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/gradient_background">

        <ImageView
            android:id="@+id/btnBack"
            android:layout_width="33dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:contentDescription="@string/todo"
            android:paddingTop="40dp"
            android:src="@drawable/baseline_arrow_back_24" />

        <TextView
            android:id="@+id/bannerTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:alpha="0.7"
            android:fontFamily="sans-serif"
            android:gravity="center"
            android:paddingTop="33dp"
            android:text="@string/planner"
            android:textColor="@android:color/white"
            android:textSize="30sp" />

    </RelativeLayout>
    <!-- Content below the banner -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/oneLay"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/descriptionLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:fontFamily="@font/joan"
            android:text="@string/infoText"
            android:textAlignment="center"
            android:textSize="20sp"
            android:textStyle="bold"
            />

        <TextView
            android:id="@+id/currentGpaLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/current"
            android:textStyle="bold"
            />

        <EditText
            android:id="@+id/currentGpaInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:hint="@string/current"
            android:inputType="numberDecimal" />

        <TextView
            android:id="@+id/totalCreditsLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/creditEarn"
            android:textStyle="bold"
            />

        <EditText
            android:id="@+id/totalCreditsInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:hint="@string/creditEarn"
            android:inputType="number" />

        <TextView
            android:id="@+id/desiredGpaLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/Desired"
            android:textStyle="bold"/>

        <EditText
            android:id="@+id/desiredGpaInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:hint="@string/Desired"
            android:inputType="numberDecimal"
            />

        <TextView
            android:id="@+id/futureCreditsLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/Future"
            android:textStyle="bold"/>

        <EditText
            android:id="@+id/futureCreditsInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:hint="@string/Future"
            android:inputType="number" />

        <Button
            android:id="@+id/calculateBotton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:backgroundTint="#ffc3a0"
            android:paddingTop="15dp"
            android:paddingBottom="15dp"
            android:text="@string/calculate" />


        <TextView
            android:id="@+id/resultLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="" />

        <TextView
            android:id="@+id/resultOutput"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:textSize="18sp" />
    </LinearLayout>

</RelativeLayout>
