<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_gravity="center_vertical"
        android:layout_marginBottom="100dp"
        android:orientation="vertical"
        android:background="@drawable/gradient_background"
        >

        <TextView
            android:id="@+id/bannerTextView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:alpha="0.7"
            android:fontFamily="sans-serif"
            android:gravity="center"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:text="@string/WelcomeBanner"
            android:textColor="@android:color/white"
            android:textSize="30sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="100dp"
        android:orientation="vertical">

        <Button
            android:id="@+id/btnGPA"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textSize="25sp"
            android:paddingTop="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:paddingBottom="20dp"
            android:text="@string/GpaCalculator"
            android:backgroundTint="#ffc3a0"

            />

        <Button
            android:id="@+id/btnFuture"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="16dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:paddingTop="20dp"
            android:paddingBottom="20dp"
            android:text="@string/FuturePlanning"
            android:textSize="25sp"
            android:backgroundTint="#ffc3a0"
            />

        <ProgressBar
            android:id="@+id/loaderBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="200dp"
            android:layout_gravity="center"
            android:visibility="gone" />
    </LinearLayout>

</LinearLayout>



